force-app/main/default/objects/MRTSVCPricing__c/MRTSVCPricing__c.object-meta.xml
<CustomObject>
    <label>MTR/SVC Line+Service</label>
    <nameField>
        <displayFormat>SVSP-{000000}</displayFormat>
        <label>MTR/SVC+SVC PRICING ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTR/SVC Line+Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>