force-app/main/default/objects/MRTSVCPricing__c/fields/MaterialBuyingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>MaterialBuyingUnitPriceLocalFormu__c</fullName>
    <formula>MaterialID__r.BuyingUnitPriceLocal__c</formula>
    <label>MATERIAL BUYING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>