force-app/main/default/objects/MRTSVCPricing__c/fields/MaterialBuyingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>MaterialBuyingUnitPriceUSD__c</fullName>
    <label>MATERIAL BUYING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>