force-app/main/default/objects/MRTSVCPricing__c/fields/MaterialBuyingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>MaterialBuyingUnitPriceUSDFormu__c</fullName>
    <formula>MaterialID__r.BuyingUnitPriceUSD__c</formula>
    <label>MATERIAL BUYING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>