force-app/main/default/objects/MRTSVCPricing__c/fields/MaterialID__c.field-meta.xml
<CustomField>
    <fullName>MaterialID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MATERIAL ID</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>MTR/SVC+SVC PRICING</relationshipLabel>
    <relationshipName>MTRSVCPricingMaterialID</relationshipName>
    <type>Lookup</type>
</CustomField>