force-app/main/default/objects/MRTSVCPricing__c/fields/MaterialSellingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>MaterialSellingUnitPriceLocalFormu__c</fullName>
    <formula>MaterialID__r.StandardSellingUnitPriceLocal__c</formula>
    <label>MATERIAL SELLING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>