force-app/main/default/objects/MRTSVCPricing__c/fields/MaterialSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>MaterialSellingUnitPriceUSD__c</fullName>
    <label>MATERIAL SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>