force-app/main/default/objects/MRTSVCPricing__c/fields/ServiceID__c.field-meta.xml
<CustomField>
    <fullName>ServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE ID</label>
    <referenceTo>ServiceMaster__c</referenceTo>
    <relationshipLabel>SVC+SVC PRICING</relationshipLabel>
    <relationshipName>SVCSVCPricingID</relationshipName>
    <type>Lookup</type>
</CustomField>