force-app/main/default/objects/MRTSVCPricing__c/fields/SVCPricingID__c.field-meta.xml
<CustomField>
    <fullName>SVCPricingID__c</fullName>
    <label>SVC PRICING ID</label>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipLabel>MTR/SVC+SVC PRICING</relationshipLabel>
    <relationshipName>MTRSVCSVCPricingID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>