force-app/main/default/objects/MRTSVCPricing__c/fields/SvcPricingRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>SvcPricingRollupStatus__c</fullName>
    <label>SVC PRICING ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>