force-app/main/default/objects/MRTSVCPricing__c/fields/SVCSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SVCSellingUnitPriceLocal__c</fullName>
    <label>SVC SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>